--- a/style.css
+++ b/style.css
@@ -4,10 +4,7 @@
     box-sizing: border-box;
 }
 
-input {
-    width: 100%;
-    padding: 1rem;
-    border-radius: 10px;
+.card {
+    margin: 10px;
 }
-
 
